# bayescoin

./: LICENSE  README.md  pyproject.toml  version.py
.github/workflows/: release.yml
src/bayescoin/: __init__.py  _cli_entry.py  cli.py  core.py  viz.py
tests/: smoke_test.py  test_core.py  test_viz.py
